* https://github.com/devonfw/IDEasy/issues/901[#901]: Consider maven wrapper mvnw
* https://github.com/devonfw/IDEasy/issues/1309[#1309]: ide.bat splitting short options
* https://github.com/devonfw/IDEasy/issues/1361[#1361]: ide create does not install intellij plugins properly
* https://github.com/devonfw/IDEasy/issues/1340[#1340]: IDEasy does not warn user if IDE_ROOT is not sane
* https://github.com/devonfw/IDEasy/issues/1292[#1292]: logs potential welcome file in settings dir to info level

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/29?closed=1[milestone 2025.06.002].

== 2025.06.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/809[#809]: Make uninstall with --force also remove from software repo
* https://github.com/devonfw/IDEasy/issues/1038[#1038]: XML merger fails in native-image on custom XPath with MissingResourceException
* https://github.com/devonfw/IDEasy/issues/1108[#1108]: Git fails if not authenticated, request for login/password not visible to the user
* https://github.com/devonfw/IDEasy/issues/1293[#1293]: Ensure git core.longpaths on Windows
* https://github.com/devonfw/IDEasy/issues/1307[#1307]: Link to settings documentation is broken
* https://github.com/devonfw/IDEasy/issues/351[#351]: Avoid inheriting environment variables from other IDEasy project if switched in the same shell session
* https://github.com/devonfw/IDEasy/issues/1332[#1332]: Cannot launch eclipse due to failing plugin
* https://github.com/devonfw/IDEasy/issues/716[#716]: Show progress of vscode extension installation

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/28?closed=1[milestone 2025.06.001].

== 2025.05.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/736[#736]: IntelliJ cannot install plugin to intellij