@@ -1,5 +1,7 @@
 package com.devonfw.tools.ide.tool.gradle;
 
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Set;
 
 import com.devonfw.tools.ide.common.Tag;
@@ -11,6 +13,12 @@ import com.devonfw.tools.ide.tool.ToolCommandlet;
  * {@link ToolCommandlet} for <a href="https://gradle.org/">gradle</a>.
  */
 public class Gradle extends LocalToolCommandlet {
+
+  /**
+   * The name of the gradle configuration folder.
+   */
+  public static final String GRADLE_CONFIG_FOLDER = "gradle";
+
 
   /**
    * The constructor.
@@ -26,6 +34,19 @@ public class Gradle extends LocalToolCommandlet {
   public String getToolHelpArguments() {
 
     return "--help";
+  }
+
+  /**
+   * @return the {@link Path} to the gradle configuration folder, creates the folder if it was not existing.
+   */
+  public Path getOrCreateGradleConfFolder() {
+
+    Path confPath = this.context.getConfPath();
+    Path gradleConfigFolder = confPath.resolve(GRADLE_CONFIG_FOLDER);
+    if (!Files.isDirectory(gradleConfigFolder)) {
+      this.context.getFileAccess().mkdirs(gradleConfigFolder);
+    }
+    return gradleConfigFolder;
   }
 
 }
